# Lessons

Lesson-19/Code-1-Notepad/: CMakeLists.txt  main.cpp
